--- a/app/views/damage_types/show.html.erb
+++ b/app/views/damage_types/show.html.erb
@@ -1,4 +1,4 @@
-<h4>Damage Type - Detail</h4>
+<h4><%= "#{t :damage_type} - #{t :detail}" %></h4>
 
 <table class="table table-bordered">
   <thead>
@@ -14,9 +14,9 @@
 </table>
 
 <%= link_to damage_types_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Go Back
+    <%= fa_icon 'arrow-left' %> <%= t :go_back %>
 <% end %>
 
 <%= link_to edit_damage_type_path(@damage_type), :class => 'badge badge-dark' do %>
-    <%= fa_icon 'pencil' %> Edit
+    <%= fa_icon 'pencil' %> <%= t :edit %>
 <% end %>
