--- a/app/views/fuel_types/new.html.erb
+++ b/app/views/fuel_types/new.html.erb
@@ -1,7 +1,7 @@
-<h4>Fuel Type - New</h4>
+<h4><%= t :fuel_types %> - <%= t :new %></h4>
 
 <%= render 'form', fuel_type: @fuel_type %>
 
 <%= link_to fuel_types_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Go Back
+    <%= fa_icon 'arrow-left' %> <%= t :go_back %>
 <% end %>
