--- a/app/views/insurances/edit.html.erb
+++ b/app/views/insurances/edit.html.erb
@@ -1,12 +1,12 @@
-<h4>Insurance - Edit</h4>
+<h4><%= t :insurance %> - <%= t :edit %></h4>
 
 <%= render 'form', insurance: @insurance %>
 
 <%= link_to insurances_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Go Back
+    <%= fa_icon 'arrow-left' %> <%= t :go_back %>
 <% end %>
 
 <%= link_to @insurance, :class => 'badge badge-light' do %>
-    <%= fa_icon 'eye' %> Show Detail
+    <%= fa_icon 'eye' %> <%= t :preview %>
 <% end %>
 
