--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -42,18 +42,18 @@
 
               <li class="dropdown-item">
                 <% if current_manager.full_name %>
-                  <span>Signed as <b><%= current_manager.full_name %></b></span>
+                  <span><%= t :signed_as %> <b><%= current_manager.full_name %></b></span>
                 <% end %>
               </li>
 
               <li class="dropdown-item">
                 <%= link_to edit_manager_registration_path(current_manager) do %>
-                    <%= fa_icon 'user' %> Your profile
+                    <%= fa_icon 'user' %> <%= t :your_profile %>
                 <% end %>
               </li>
               <li class="dropdown-item">
                 <%= link_to destroy_manager_session_path, method: :delete do %>
-                    <%= fa_icon 'close' %> Sign out
+                    <%= fa_icon 'close' %> <%= t :sign_out %>
                 <% end %>
               </li>
             </ul>
