--- a/app/views/statistics/expenses/_insurances_stats.html.erb
+++ b/app/views/statistics/expenses/_insurances_stats.html.erb
@@ -3,7 +3,7 @@
     <div class="card-body">
 
       <h4 class="card-title">
-        Insurances
+        <%= t 'insurances' %>
         <b class="badge badge-info">
           <%= number_to_currency(Insurance.insurances_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
         </b>
