--- a/app/views/break_causes/_form.html.erb
+++ b/app/views/break_causes/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @break_cause do |form| %>
 
     <div class="form-group row">
-      <%= form.label 'Break Cause', class: 'col-sm-2 col-form-label' %>
+      <%= form.label "#{t :break_cause}", class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
         <%= form.text_field :name, class: 'form-control' %>
         <% if !@break_cause.errors.messages[:'name'].empty?  %>
@@ -17,7 +17,7 @@
     </div>
 
     <div class="actions">
-      <%= form.submit 'Save', :class => 'btn btn-info' %>
+      <%= form.submit "#{t :save}", :class => 'btn btn-info' %>
     </div>
 
 <% end %>
