--- a/app/views/breaks/_form.html.erb
+++ b/app/views/breaks/_form.html.erb
@@ -2,7 +2,7 @@
 
 
     <div class="form-group row">
-      <%= form.label 'Damage Cause', class: 'col-sm-2 col-form-label' %>
+      <%= form.label "#{t :damage_cause}", class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
         <%= form.collection_select :break_cause_id, BreakCause.all, :id, :name, {
           :multiple => false,
@@ -15,7 +15,7 @@
     <%= form.fields_for :expense  do |expense_form| %>
 
         <div class="form-group row">
-          <%= expense_form.label 'Amount', class: 'col-sm-2 col-form-label' %>
+          <%= expense_form.label "#{t :amount}", class: 'col-sm-2 col-form-label' %>
           <div class="col-sm-10">
             <div class="input-group">
               <%= expense_form.number_field :amount, class: 'form-control' %>
@@ -45,7 +45,7 @@
     <% end %>
 
     <div class="form-group row">
-      <%= form.label 'Date de début', class: 'col-sm-2 col-form-label' %>
+      <%= form.label "#{t :starting_date}", class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
         <%= form.date_field :start_date, class: 'form-control' %>
 
@@ -63,7 +63,7 @@
     </div>
 
     <div class="form-group row">
-      <%= form.label 'Starting Date', class: 'col-sm-2 col-form-label' %>
+      <%= form.label "#{t :end_date}", class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
         <%= form.date_field :end_date, class: 'form-control' %>
 
@@ -81,7 +81,7 @@
     </div>
 
     <div class="actions">
-      <%= form.submit 'Save', :class => 'btn btn-info' %>
+      <%= form.submit "#{t :save}", :class => 'btn btn-info' %>
     </div>
 
 <% end %>
