--- a/app/views/breaks/index.html.erb
+++ b/app/views/breaks/index.html.erb
@@ -1,11 +1,11 @@
-<h4>Breaks</h4>
+<h4><%= t :breaks %></h4>
 
 <!-- # -->
 <div class="actions row">
 
   <div class="col-md-4">
     <%= link_to new_break_path, :class => 'btn btn-info btn-sm' do %>
-        <%= fa_icon 'plus' %> Add a New Break
+        <%= fa_icon 'plus' %> <%= t :add_a_new_break %>
     <% end %>
   </div>
 
@@ -13,7 +13,7 @@
     <input type="search"
            class="form-control"
            id="search-break"
-           placeholder="Your Text..." aria-label="Your Text...">
+           placeholder="<%= t :your_text %>..." aria-label="<%= t :your_text %>...">
   </div>
 
 </div>
@@ -23,10 +23,10 @@
   <thead>
     <tr>
       <th>Cause</th>
-      <th>Starting Date</th>
-      <th>End Date</th>
-      <th>Delay</th>
-      <th>Amount</th>
+      <th><%= t :starting_date %></th>
+      <th><%= t :end_date %></th>
+      <th><%= t :delay %></th>
+      <th><%= t :amount %></th>
       <th class="td-actions">Actions</th>
     </tr>
   </thead>
@@ -37,7 +37,7 @@
         <td><%= b.break_cause.name %></td>
         <td><%= b.start_date %></td>
         <td><%= b.end_date %></td>
-        <td><%= (b.end_date - b.start_date).to_i %> days</td>
+        <td><%= (b.end_date - b.start_date).to_i %> <%= t :days %></td>
         <td><%= b.expense.amount %></td>
         <td>
           <%= link_to b, :class => 'btn btn-outline-dark btn-sm' do %>
@@ -46,7 +46,7 @@
           <%= link_to edit_break_path(b), :class => 'btn btn-outline-dark btn-sm' do %>
               <%= fa_icon 'pencil' %>
           <% end %>
-          <%= link_to b, method: :delete, data: { confirm: 'Are Your Sur?' }, class: 'btn btn-outline-dark btn-sm' do %>
+          <%= link_to b, method: :delete, data: { confirm: "#{t :are_you_sure}" }, class: 'btn btn-outline-dark btn-sm' do %>
               <%= fa_icon 'close' %>
           <% end %>
         </td>
