--- a/app/views/breaks/new.html.erb
+++ b/app/views/breaks/new.html.erb
@@ -1,7 +1,7 @@
-<h4>Break- New</h4>
+<h4><%= t :break %> - <%= t :new %></h4>
 
 <%= render 'form', break: @break %>
 
 <%= link_to breaks_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Go Back
+    <%= fa_icon 'arrow-left' %> <%= t :go_back %>
 <% end %>
