--- a/app/views/cabs/new.html.erb
+++ b/app/views/cabs/new.html.erb
@@ -1,7 +1,7 @@
-<h4>Cab - New</h4>
+<h4><%= t :vehicle %> - <%= t :new %></h4>
 
 <%= render 'form', cab: @cab %>
 
 <%= link_to cabs_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Go Back
+    <%= fa_icon 'arrow-left' %> <%= t :go_back %>
 <% end %>
