--- a/app/views/damage_types/edit.html.erb
+++ b/app/views/damage_types/edit.html.erb
@@ -1,11 +1,11 @@
-<h4>Damage Type - Edit</h4>
+<h4><%= t :damage_type %> - <%= t :edit %></h4>
 
 <%= render 'form', damage_type: @damage_type %>
 
 <%= link_to damage_types_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Go Back
+    <%= fa_icon 'arrow-left' %> <%= t :go_back %>
 <% end %>
 
 <%= link_to @damage_type, :class => 'badge badge-light' do %>
-    <%= fa_icon 'eye' %> Show Detail
+    <%= fa_icon 'eye' %> <%= t :preview %>
 <% end %>
