--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,3 @@
-
-
-
 <div class="devise">
 
   <%= render 'devise/shared/logo' %>
@@ -8,10 +5,9 @@
   <div class="card-box">
 
     <div class="text-center">
-      <h3>Forgot your password?</h3>
+      <h3><%= t :forgot_password %>?</h3>
       <p>
-        Enter your email address and we'll send you
-        an email with instructions to reset your password.
+        <%= t :enter_your_email_msg %>
       </p>
     </div>
 
@@ -23,7 +19,7 @@
             <%= f.email_field :email, autofocus: true, class: 'form-control', placeholder: 'Email' %>
           </div>
 
-          <%= f.submit 'Send me reset instructions', class: 'btn btn-info' %>
+          <%= f.submit "#{t :send_me_reset_instructions}", class: 'btn btn-info' %>
 
       <% end %>
 
@@ -32,9 +28,9 @@
   </div>
 
   <div class="sublink">
-    Already have an account?
-    <%= link_to 'Log in', new_session_path(resource_name) %> |
-    <%= link_to 'Sign up', new_registration_path(resource_name) %>
+    <%= t :already_have_an_account %>?
+    <%= link_to "#{t :login}", new_session_path(resource_name) %> |
+    <%= link_to "#{t :sign_up}", new_registration_path(resource_name) %>
   </div>
 
 </div>
