--- a/app/views/drivers/new.html.erb
+++ b/app/views/drivers/new.html.erb
@@ -1,7 +1,7 @@
-<h4>Driver - New</h4>
+<h4><%= t :driver %> - <%= t :new %></h4>
 
 <%= render 'form', driver: @driver %>
 
 <%= link_to drivers_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Go Back
+    <%= fa_icon 'arrow-left' %> <%= t :go_back %>
 <% end %>
