--- a/app/views/expenses/sub-pages/_breaks.html.erb
+++ b/app/views/expenses/sub-pages/_breaks.html.erb
@@ -3,7 +3,7 @@
 
       <!-- # -->
       <h4 class="card-title">
-        Breaks
+        <%= t 'breaks' %>
         <b class="badge badge-info">
           <%= number_to_currency(Break.includes(:expense).pluck(:amount).sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
         </b>
@@ -16,8 +16,8 @@
           <thead>
           <tr>
             <th>Cause</th>
-            <th>Delay</th>
-            <th>Amount</th>
+            <th><%= t :delay %></th>
+            <th><%= t :amount %></th>
           </tr>
           </thead>
 
@@ -29,7 +29,7 @@
                       <%= b.break_cause.name %>
                   <% end %>
                 </td>
-                <td><%= (b.end_date - b.start_date).to_i %> days</td>
+                <td><%= (b.end_date - b.start_date).to_i %> <%= t :days %></td>
                 <td><b><%= b.expense.amount %> DH</b></td>
               </tr>
           <% end %>
@@ -40,17 +40,17 @@
         <!-- # -->
         <div class="col-md-12">
           <%= link_to new_break_path, :class => 'btn btn-sm btn-info' do %>
-              <%= fa_icon 'plus' %> Add an Break
+              <%= fa_icon 'plus' %> <%= t :add_a_new_break %>
           <% end %>
           <%= link_to breaks_path, :class => 'btn btn-sm btn-secondary' do %>
-              <%= fa_icon 'list' %> Show More
+              <%= fa_icon 'list' %> <%= t 'show_more' %>
           <% end %>
         </div>
 
         <% else %>
-          <h5>No Data</h5>
+          <h5><%= t :no_data %></h5>
           <%= link_to new_break_path, :class => 'btn btn-sm btn-info' do %>
-              <%= fa_icon 'plus' %> Add a Break
+              <%= fa_icon 'plus' %> <%= t :add_a_new_break %>
           <% end %>
       <% end %>
 
