--- a/app/views/expenses/sub-pages/_insurances.html.erb
+++ b/app/views/expenses/sub-pages/_insurances.html.erb
@@ -3,7 +3,7 @@
 
       <!-- # -->
       <h4 class="card-title">
-        Insurances
+        <%= t :insurances %>
         <b class="badge badge-info">
           <%= number_to_currency(Insurance.includes(:expense).pluck(:amount).sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
         </b>
@@ -15,10 +15,10 @@
         <table class="table table-bordered">
           <thead>
           <tr>
-            <th>Insurer</th>
-            <th>Starting Date</th>
-            <th>End Date</th>
-            <th>Amount</th>
+            <th><%= t :insurer %></th>
+            <th><%= t :starting_date %></th>
+            <th><%= t :end_date %></th>
+            <th><%= t :amount %></th>
           </tr>
           </thead>
 
@@ -43,17 +43,17 @@
         <!-- # -->
         <div class="col-md-12">
           <%= link_to new_insurance_path, :class => 'btn btn-sm btn-info' do %>
-              <%= fa_icon 'plus' %> Add an Insurance
+              <%= fa_icon 'plus' %> <%= t :add_a_new_insurance %>
           <% end %>
           <%= link_to insurances_path, :class => 'btn btn-sm btn-secondary' do %>
-              <%= fa_icon 'list' %> Show More
+              <%= fa_icon 'list' %> <%= t 'show_more' %>
           <% end %>
         </div>
 
         <% else %>
-          <h5>No Data</h5>
+          <h5><%= t :no_data %></h5>
           <%= link_to new_insurance_path, :class => 'btn btn-sm btn-info' do %>
-              <%= fa_icon 'plus' %> Add an Insurance
+              <%= fa_icon 'plus' %> <%= t :add_a_new_insurance %>
           <% end %>
       <% end %>
 
