--- a/app/views/expenses/sub-pages/_owner_takes.html.erb
+++ b/app/views/expenses/sub-pages/_owner_takes.html.erb
@@ -3,7 +3,7 @@
 
       <!-- # -->
       <h4 class="card-title">
-        Owner Takes
+        <%= t 'owner_takes' %>
         <b class="badge badge-info">
           <%= number_to_currency(OwnerTake.includes(:expense).pluck(:amount).sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
         </b>
@@ -17,9 +17,9 @@
 
           <thead>
           <tr>
-            <th>Owner</th>
+            <th><%= t :owner %></th>
             <th>Date</th>
-            <th>Amount</th>
+            <th><%= t :amount %></th>
           </tr>
           </thead>
 
@@ -42,17 +42,17 @@
         <!-- # -->
         <div class="col-md-12">
           <%= link_to new_owner_take_path, :class => 'btn btn-sm btn-info' do %>
-              <%= fa_icon 'plus' %> Add an Owner Take
+              <%= fa_icon 'plus' %> <%= t :add_a_new_owner_take %>
           <% end %>
           <%= link_to owner_takes_path, :class => 'btn btn-sm btn-secondary' do %>
-              <%= fa_icon 'list' %> Show More
+              <%= fa_icon 'list' %> <%= t 'show_more' %>
           <% end %>
         </div>
 
       <% else %>
-          <h5>No Data</h5>
+          <h5><%= t :no_data %></h5>
           <%= link_to new_owner_take_path, :class => 'btn btn-sm btn-info' do %>
-              <%= fa_icon 'plus' %> Add an Owner Take
+              <%= fa_icon 'plus' %> <%= t :add_a_new_owner_take %>
           <% end %>
       <% end %>
 
