--- a/app/views/insurances/_form.html.erb
+++ b/app/views/insurances/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: insurance, local: true) do |form| %>
 
     <div class="form-group row">
-      <%= form.label 'Nom de l\'asurreur', class: 'col-sm-2 col-form-label' %>
+      <%= form.label "#{t :insurer_name}", class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
         <%= form.collection_select :insurer_id, Insurer.all, :id, :name, {
           :multiple => false,
@@ -14,7 +14,7 @@
     <%= form.fields_for :expense  do |expense_form| %>
 
         <div class="form-group row">
-          <%= expense_form.label 'Amount', class: 'col-sm-2 col-form-label' %>
+          <%= expense_form.label "#{t :amount}", class: 'col-sm-2 col-form-label' %>
           <div class="col-sm-10">
             <div class="input-group">
               <%= expense_form.number_field :amount, class: 'form-control' %>
@@ -35,7 +35,7 @@
         </div>
 
         <div class="form-group row">
-          <%= expense_form.label 'Attached File', class: 'col-sm-2 col-form-label' %>
+          <%= expense_form.label "#{t :attached_file}", class: 'col-sm-2 col-form-label' %>
           <div class="col-sm-10">
             <%= expense_form.file_field :attached_file %>
           </div>
@@ -51,7 +51,7 @@
     <% end %>
 
     <div class="form-group row">
-      <%= form.label 'Date de début', class: 'col-sm-2 col-form-label' %>
+      <%= form.label "#{t :starting_date}", class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
         <%= form.date_field :start_date, class: 'form-control' %>
 
@@ -69,7 +69,7 @@
     </div>
 
     <div class="form-group row">
-      <%= form.label 'Date d\'expiration', class: 'col-sm-2 col-form-label' %>
+      <%= form.label "#{t :expiration_date}", class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
         <%= form.date_field :expiration_date, class: 'form-control' %>
 
@@ -88,7 +88,7 @@
     </div>
 
     <div class="actions">
-      <%= form.submit 'Save', :class => 'btn btn-info' %>
+      <%= form.submit "#{t :save}", :class => 'btn btn-info' %>
     </div>
 
 <% end %>
