--- a/app/views/insurers/edit.html.erb
+++ b/app/views/insurers/edit.html.erb
@@ -1,11 +1,11 @@
-<h4>Insurer - Edit</h4>
+<h4><%= t :insurer %> - <%= t :edit %></h4>
 
 <%= render 'form', insurer: @insurer %>
 
 <%= link_to insurers_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Go Back
+    <%= fa_icon 'arrow-left' %> <%= t :go_back %>
 <% end %>
 
 <%= link_to @insurer, :class => 'badge badge-light' do %>
-    <%= fa_icon 'eye' %> Show Detail
+    <%= fa_icon 'eye' %> <%= t :preview %>
 <% end %>
