--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -18,7 +18,8 @@
     <!-- # -->
     <li class="nav-item">
       <%= link_to root_path do %>
-          <%= fa_icon 'home' %> Dashboard
+          <%= fa_icon 'home' %>
+          <%= t 'dashboard' %>
       <% end %>
     </li>
 
@@ -29,7 +30,7 @@
 
     <!-- # Title -->
     <li class="list-header">
-      <h4>Modules</h4>
+      <h4><%= t 'categories' %></h4>
     </li>
 
     <!-- # Expenses -->
@@ -39,34 +40,34 @@
          aria-expanded="false"
          aria-controls="expensesCollapse">
         <%= fa_icon 'bank' %>
-        Expenses
+        <%= t 'expenses' %>
         <%= fa_icon 'angle-right' %>
         <%= fa_icon 'angle-down' %>
       </a>
       <ul class="<%= current_path('expenses/') ? 'collapse show' : 'collapse hide' %> multi-collapse" id="expensesCollapse">
         <li>
           <%= link_to all_expenses_path, class: "#{ current_path('expenses/all') ? 'active' : '' }" do %>
-              <%= fa_icon 'caret-right' %> All Expenses
+              <%= fa_icon 'caret-right' %> <%= t 'all_expenses' %>
           <% end %>
         </li>
         <li>
           <%= link_to insurances_path, class: "#{ current_path('insurances') ? 'active' : '' }" do %>
-              <%= fa_icon 'caret-right' %> Insurances
+              <%= fa_icon 'caret-right' %> <%= t 'insurances' %>
           <% end %>
         </li>
         <li>
           <%= link_to breaks_path, class: "#{ current_path('breaks') ? 'active' : '' }" do %>
-              <%= fa_icon 'caret-right' %> Breaks
+              <%= fa_icon 'caret-right' %> <%= t 'breaks' %>
           <% end %>
         </li>
         <li>
           <%= link_to damages_path, class: "#{ current_path('damages') ? 'active' : '' }" do %>
-              <%= fa_icon 'caret-right' %> Damages
+              <%= fa_icon 'caret-right' %> <%= t 'damages' %>
           <% end %>
         </li>
         <li>
           <%= link_to owner_takes_path , class: "#{ current_path('owner_takes') ? 'active' : '' }" do %>
-              <%= fa_icon 'caret-right' %> Owner Takes
+              <%= fa_icon 'caret-right' %> <%= t 'owner_takes' %>
           <% end %>
         </li>
       </ul>
@@ -79,19 +80,19 @@
          aria-expanded="false"
          aria-controls="incomesCollapse">
         <%= fa_icon 'money' %>
-        Incomes
+        <%= t 'incomes' %>
         <%= fa_icon 'angle-right' %>
         <%= fa_icon 'angle-down' %>
       </a>
       <ul class="<%= current_path('incomes/') ? 'collapse show' : 'collapse hide' %> multi-collapse" id="incomesCollapse">
         <li>
           <%= link_to all_incomes_path, class: "#{ current_path('incomes/all') ? 'active' : '' }" do %>
-              <%= fa_icon 'caret-right' %> All Incomes
+              <%= fa_icon 'caret-right' %><%= t 'all_incomes' %>
           <% end %>
         </li>
         <li>
           <%= link_to manager_takes_path, class: "#{ current_path('manager_takes') ? 'active' : '' }" do %>
-              <%= fa_icon 'caret-right' %> Manager Take
+              <%= fa_icon 'caret-right' %> <%= t 'manager_take' %>
           <% end %>
         </li>
       </ul>
@@ -111,42 +112,42 @@
       <ul class="<%= current_path('cabs') ? 'collapse show' : 'collapse hide' %> multi-collapse" id="cabCollapse">
         <li>
           <%= link_to all_cabs_path, class: "#{ current_path('cabs/all') ? 'active' : '' }" do %>
-              <%= fa_icon 'caret-right' %> Vehicle
+              <%= fa_icon 'caret-right' %> <%= t 'vehicle' %>
           <% end %>
         </li>
         <li>
           <%= link_to drivers_path, class: "#{ current_path('drivers') ? 'active' : '' }" do %>
-              <%= fa_icon 'caret-right' %> Drivers
+              <%= fa_icon 'caret-right' %> <%= t 'drivers' %>
           <% end %>
         </li>
         <li>
           <%= link_to cab_models_path, class: "#{ current_path('cab_models') ? 'active' : '' }" do %>
-              <%= fa_icon 'caret-right' %> Models
+              <%= fa_icon 'caret-right' %> <%= t 'models' %>
           <% end %>
         </li>
         <li>
           <%= link_to fuel_types_path, class: "#{ current_path('fuel_types') ? 'active' : '' }" do %>
-              <%= fa_icon 'caret-right' %> Fuel Types
+              <%= fa_icon 'caret-right' %> <%= t 'fuel_types' %>
           <% end %>
         </li>
         <li>
           <%= link_to damage_types_path, class: "#{ current_path('damage_types') ? 'active' : '' }" do %>
-              <%= fa_icon 'caret-right' %> Damage Types
+              <%= fa_icon 'caret-right' %> <%= t 'damage_types' %>
           <% end %>
         </li>
         <li>
           <%= link_to break_causes_path, class: "#{ current_path('break_causes') ? 'active' : '' }" do %>
-              <%= fa_icon 'caret-right' %> Break Causes
+              <%= fa_icon 'caret-right' %> <%= t 'break_causes' %>
           <% end %>
         </li>
         <li>
           <%= link_to insurers_path, class: "#{ current_path('insurers') ? 'active' : '' }" do %>
-              <%= fa_icon 'caret-right' %> Insurers
+              <%= fa_icon 'caret-right' %> <%= t 'insurers' %>
           <% end %>
         </li>
         <li>
           <%= link_to owners_path, class: "#{ current_path('owners') ? 'active' : '' }" do %>
-              <%= fa_icon 'caret-right' %> Owners
+              <%= fa_icon 'caret-right' %> <%= t 'owners' %>
           <% end %>
         </li>
       </ul>
@@ -159,17 +160,17 @@
          aria-expanded="false"
          aria-controls="cabStatistics">
         <%= fa_icon 'bar-chart' %>
-        Statistics
+        <%= t 'statistics' %>
         <%= fa_icon 'angle-right' %>
         <%= fa_icon 'angle-down' %>
       </a>
       <ul class="<%= current_path('statistics') ? 'collapse show' : 'collapse' %> multi-collapse" id="cabStatistics">
         <li>
-          <%= link_to "#{fa_icon 'caret-right'} Expenses".html_safe, :get_stats_expenses,
+          <%= link_to "#{fa_icon 'caret-right'} #{t 'expenses'}".html_safe, :get_stats_expenses,
                       class: "#{ params[:action] === 'expenses' ? 'active' : '' }" %>
         </li>
         <li>
-          <%= link_to "#{fa_icon 'caret-right'} Incomes".html_safe, :get_stats_incomes,
+          <%= link_to "#{fa_icon 'caret-right'} #{t 'incomes'}".html_safe, :get_stats_incomes,
                       class: "#{ params[:action] === 'incomes' ? 'active' : '' }" %>
         </li>
       </ul>
