--- a/app/views/manager_takes/_form.html.erb
+++ b/app/views/manager_takes/_form.html.erb
@@ -41,7 +41,7 @@
     <%= form.fields_for :income  do |income_form| %>
 
         <div class="form-group row">
-          <%= income_form.label 'Amount', class: 'col-sm-2 col-form-label' %>
+          <%= income_form.label "#{t :amount}", class: 'col-sm-2 col-form-label' %>
           <div class="col-sm-10">
             <div class="input-group">
               <%= income_form.number_field :amount, class: 'form-control' %>
@@ -63,7 +63,7 @@
 
 
         <div class="form-group row">
-          <%= income_form.label 'Attached File', class: 'col-sm-2 col-form-label' %>
+          <%= income_form.label "#{t :attached_file}", class: 'col-sm-2 col-form-label' %>
           <div class="col-sm-10">
             <%= income_form.file_field :attached_file %>
           </div>
@@ -80,7 +80,7 @@
     <% end %>
 
     <div class="actions">
-      <%= form.submit 'Save', :class => 'btn btn-info' %>
+      <%= form.submit "#{t :save}", :class => 'btn btn-info' %>
     </div>
 
 <% end %>
