--- a/app/views/manager_takes/edit.html.erb
+++ b/app/views/manager_takes/edit.html.erb
@@ -1,11 +1,11 @@
-<h4>Edit</h4>
+<h4><%= t :manager_take %> - <%= t :edit %></h4>
 
 <%= render 'form', manager_take: @manager_take %>
 
 <%= link_to manager_takes_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Go Back
+    <%= fa_icon 'arrow-left' %> <%= t :go_back %>
 <% end %>
 
 <%= link_to @manager_take, :class => 'badge badge-light' do %>
-    <%= fa_icon 'eye' %> Show Detail
+    <%= fa_icon 'eye' %> <%= t :preview %>
 <% end %>
