--- a/app/views/owner_takes/index.html.erb
+++ b/app/views/owner_takes/index.html.erb
@@ -1,11 +1,11 @@
-<h4>Owner Takes</h4>
+<h4><%= t :owner_takes %></h4>
 
 <!-- # -->
 <div class="actions row">
 
   <div class="col-md-4">
     <%= link_to new_owner_take_path, :class => 'btn btn-info btn-sm' do %>
-        <%= fa_icon 'plus' %> Add a New Owner Take
+        <%= fa_icon 'plus' %> <%= t :add_a_new_owner_take %>
     <% end %>
   </div>
 
@@ -13,7 +13,7 @@
     <input type="search"
            class="form-control"
            id="search-owner-take"
-           placeholder="Your Text..." aria-label="Your Text...">
+           placeholder="<%= t :your_text %>..." aria-label="<%= t :your_text %>...">
   </div>
 
 </div>
@@ -23,9 +23,9 @@
 
   <thead>
     <tr>
-      <th>Owner</th>
+      <th><%= t :owner %></th>
       <th>Date</th>
-      <th>Amount</th>
+      <th><%= t :amount %></th>
       <th class="td-actions">Actions</th>
     </tr>
   </thead>
@@ -43,7 +43,7 @@
           <%= link_to edit_owner_take_path(owner_take), :class => 'btn btn-outline-dark btn-sm' do %>
               <%= fa_icon 'pencil' %>
           <% end %>
-          <%= link_to owner_take, method: :delete, data: { confirm: 'Are Your Sur?' }, class: 'btn btn-outline-dark btn-sm' do %>
+          <%= link_to owner_take, method: :delete, data: { confirm: "#{t :are_you_sure}" }, class: 'btn btn-outline-dark btn-sm' do %>
               <%= fa_icon 'close' %>
           <% end %>
         </td>
