--- a/app/views/owner_takes/show.html.erb
+++ b/app/views/owner_takes/show.html.erb
@@ -1,11 +1,11 @@
-<h4>Owner Take - Detail</h4>
+<h4><%= "#{t :owner_takes} - #{t :detail}" %></h4>
 
 <table class="table table-bordered">
   <thead>
   <tr>
-    <th>Owner</th>
+    <th><%= t :owner %></th>
     <th>Date</th>
-    <th>Amount</th>
+    <th><%= t :amount %></th>
   </tr>
   </thead>
   <tbody>
@@ -18,10 +18,10 @@
 </table>
 
 <%= link_to owner_takes_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Go Back
+    <%= fa_icon 'arrow-left' %> <%= t :go_back %>
 <% end %>
 
 <%= link_to edit_owner_take_path(@owner_take), :class => 'badge badge-dark' do %>
-    <%= fa_icon 'pencil' %> Edit
+    <%= fa_icon 'pencil' %> <%= t :edit %>
 <% end %>
 
