--- a/app/views/owners/_form.html.erb
+++ b/app/views/owners/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @owner do |form| %>
 
     <div class="form-group row">
-      <%= form.label 'Nom Complet', class: 'col-sm-2 col-form-label' %>
+      <%= form.label "#{t :full_name}", class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
         <%= form.text_field :full_name, class: 'form-control' %>
         <% if !@owner.errors.messages[:'full_name'].empty?  %>
@@ -17,14 +17,14 @@
     </div>
 
     <div class="form-group row">
-      <%= form.label 'Telephone Fixe', class: 'col-sm-2 col-form-label' %>
+      <%= form.label "#{t :home_phone}", class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
         <%= form.text_field :home_phone, class: 'form-control' %>
       </div>
     </div>
 
     <div class="form-group row">
-      <%= form.label 'Telephone Mobile', class: 'col-sm-2 col-form-label' %>
+      <%= form.label "#{t :mobile_phone}", class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
         <%= form.text_field :mobile_phone, class: 'form-control' %>
         <% if !@owner.errors.messages[:'mobile_phone'].empty?  %>
@@ -40,7 +40,7 @@
     </div>
 
     <div class="actions">
-      <%= form.submit 'Save', :class => 'btn btn-info' %>
+      <%= form.submit "#{t :save}", :class => 'btn btn-info' %>
     </div>
 
 <% end %>
