--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -1,11 +1,11 @@
-<h4>Owners</h4>
+<h4><%= t :owners %></h4>
 
 <!-- # -->
 <div class="actions row">
 
   <div class="col-md-4">
     <%= link_to new_owner_path, :class => 'btn btn-info btn-sm' do %>
-        <%= fa_icon 'plus' %> Add a New Owner
+        <%= fa_icon 'plus' %> <%= t :add_a_new_owner %>
     <% end %>
   </div>
 
@@ -13,7 +13,7 @@
     <input type="search"
            class="form-control"
            id="search-owner"
-           placeholder="Your Text..." aria-label="Your Text...">
+           placeholder="<%= t :your_text %>..." aria-label="<%= t :your_text %>...">
   </div>
 
 </div>
@@ -22,9 +22,9 @@
 <table id="owner-data" class="table table-bordered">
   <thead>
     <tr>
-      <th>Full Name</th>
-      <th>Home Phone</th>
-      <th>Mobile Phone</th>
+      <th><%= t :full_name %></th>
+      <th><%= t :home_phone %></th>
+      <th><%= t :mobile_phone %></th>
       <th class="td-actions">Actions</th>
     </tr>
   </thead>
@@ -42,7 +42,7 @@
           <%= link_to edit_owner_path(owner), :class => 'btn btn-outline-dark btn-sm' do %>
               <%= fa_icon 'pencil' %>
           <% end %>
-          <%= link_to owner, method: :delete, data: {confirm: 'Are Your Sur?'}, class: 'btn btn-outline-dark btn-sm' do %>
+          <%= link_to owner, method: :delete, data: {confirm: "#{t :are_you_sure}"}, class: 'btn btn-outline-dark btn-sm' do %>
               <%= fa_icon 'close' %>
           <% end %>
         </td>
