--- a/app/views/shared/expenses/_owner_take_fields.html.erb
+++ b/app/views/shared/expenses/_owner_take_fields.html.erb
@@ -5,7 +5,7 @@
 
 			<% if @expense.errors.any? %>
 					<div id="error_explanation">
-						<h2><%= pluralize(expense.errors.count, "error") %> prohibited this expense from being saved:</h2>
+						<h2><%= pluralize(expense.errors.count, "#{t :error}") %> prohibited this expense from being saved:</h2>
 
 						<ul>
 							<% @expense.errors.full_messages.each do |message| %>
@@ -17,12 +17,12 @@
 
 
 			<div class="field">
-				<%= form.label :amount %>
+				<%= form.label "#{t :amount}" %>
 				<%= form.number_field :amount, id: :expense_amount %>
 			</div>
 
 			<div class="field">
-				<%= form.label :attached_file %>
+				<%= form.label "#{t :attached_file}" %>
 				<%= form.text_field :attached_file, id: :expense_attached_file %>
 			</div>
 
@@ -37,7 +37,7 @@
         <%= form.fields_for :owner_take do |owner_take_form| %>
             <%= owner_take_form.collection_select :owner_id, Owner.all, :id, :full_name , {
               :multiple => false,
-              :include_blank => 'Select an Owner'
+              :include_blank => "#{t :select_an_owner}"
             } %>
         <% end %>
 			</div>
